create input function

--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamic HTML/CSS Templates</title>
+    <title>Dynamic Templates</title>
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <style>
-      .template {
-        aspect-ratio: 1 / 1;
-      }
-    </style>
   </head>
-  <body class="bg-gray-100">
+  <body>
     <div class="container mx-auto p-4">
       <div class="bg-white p-6 rounded-lg shadow-lg">
         <form
@@ -152,7 +147,8 @@
         </form>
       </div>
 
-      <div></div>
+      <!-- template section -->
+      <section></section>
     </div>
 
     <script src="./js/scripts.js"></script>
